--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
 
       <h4>Which type of message ?</h4>
       <section class="choice">
-        <form>
-          <div>
+        <form class="test">
+          <div >
             <input type="radio" id="affirmation" value="affirmation" name="affirmation-mantras" />
             <label for="affirmation">affirmation</label>
           </div>
 
-          <div>
+          <div >
             <input type="radio" id="mantra" value="mantra" name="affirmation-mantras" />
             <label for="mantra">mantra</label> <br />
           </div>
@@ -37,6 +37,7 @@
         <img src="scImg/meditate.svg" alt="" class="img" />
         <p class="text hide">text</p>
         <button class="btn2 hide">Delete Message</button>
+        <!-- <button class="btn3 hide">Error</button> -->
 
       </section>
     </div>
